--- a/sigmascore/package.json
+++ b/sigmascore/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
     "next": "15.3.4",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "sonner": "^2.0.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
