--- a/sigmascore/package.json
+++ b/sigmascore/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "@tanstack/react-query": "^5.81.1",
     "next": "15.3.4",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.6.2",
     "sonner": "^2.0.5"
   },
   "devDependencies": {
